fix: fixed layout isuues with z-index, positions fetching

--- a/task3.1/ssr-task3/styles/form.scss
+++ b/task3.1/ssr-task3/styles/form.scss
@@ -40,6 +40,7 @@
 .MuiInputBase-input{
   font-family: "Source Sans Pro" !important;
   font-size: 16px !important;
+  z-index: -1;
 }
 
 .PrivateNotchedOutline-legendLabelled-3 > span {
@@ -84,6 +85,10 @@
 
 .select-component  .MuiFormHelperText-root {
   padding-left: 15px;
+}
+
+.MuiOutlinedInput-input {
+  z-index: -1;
 }
 
 .MuiListItem-button:hover {
